# langChain_academy_courses

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml
.github/: copilot-instructions.md
.langgraph_api/: .langgraph_ops.pckl
module_1/: agent_graph.py  agent_memory.py  chain_graph.py  router_graph.py  simple_graph.py  weather_graph.py
module_2/: multiple-schemas-guide.md  state-reducers-guide.md
